refactor(product-sevice): remove redis cache