@@ -33,13 +33,13 @@ public class RotatingJwkManager {
         RSAKey newKey = new RSAKeyGenerator(2048)
                 .keyID(UUID.randomUUID().toString()).generate();
         publicKeyService.savePublicKey(newKey);
-        keys.addFirst(newKey);
+        keys.add(0, newKey);
         if (keys.size() > 2) {
-            keys.removeLast();
+            keys.remove(keys.size() - 1);
         }
     }
 
     public RSAKey getActivePrivateKey() {
-        return keys.getFirst();
+        return keys.get(0);
     }
 }
